--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "estado-viaje-proxy",
+  "name": "ride4me-proxy",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "cheerio": "^1.0.0-rc.10",
-    "express": "^4.17.1"
+    "express": "^4.18.2",
+    "puppeteer": "^21.3.8"
   }
 }
